<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">二维码扫描</string>
    <string name="scan_qrcode">将二维码放入框内，即可自动扫描</string>
    <string name="scan_onecode">将条形码放入框内，即可自动扫描</string>
    <string name="scan_qr">二维码</string>
    <string name="scan_one">条形码</string>
    <string name="scan_help">帮助</string>
    <string name="scan_scan">扫一扫</string>
    <string name="scan_result">扫描结果</string>
    <string name="scan_content">扫描内容</string>
    <string name="scan_back">返回</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确定</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机可能被占用，您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="action_settings">Settings</string>

</resources>