<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2008 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <!-- 扫描窗口 -->

    <com.ertanhydro.zxing.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <!-- 顶部条栏 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="0xff"
        android:background="@drawable/mmtitle_bg_alpha" >

        <Button
            android:id="@+id/mbutton_back"
            android:layout_width="75.0dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dip"
            android:background="@drawable/mm_title_back_btn"
            android:text="@string/scan_back"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/mtextview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/mbutton_back"
            android:layout_alignBottom="@+id/mbutton_back"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/scan_scan"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <!-- 底部菜单 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:alpha="0xff"
        android:background="@drawable/scan_btombar_bg"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/qrcode_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/scan_mode_qr"
                android:contentDescription="@string/scan_qrcode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_qr"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/onecode_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/scan_mode_store"
                android:contentDescription="@string/scan_onecode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_one"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/help_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/scan_mode_book"
                android:contentDescription="@string/scan_help" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_help"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
    <!-- 扫描结果窗口 -->

    <LinearLayout
        android:id="@+id/result_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/result_view"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:padding="@dimen/standard_padding" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="right|center_vertical"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/barcode_image_view"
                    android:layout_width="160dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="@dimen/half_padding"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/scan_scan"
                    android:gravity="right"
                    android:maxHeight="160dip"
                    android:maxWidth="160dip"
                    android:scaleType="centerInside" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/half_padding"
                        android:text="@string/msg_default_format"
                        android:textColor="@color/result_minor_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/format_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/result_minor_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/half_padding"
                        android:text="@string/msg_default_type"
                        android:textColor="@color/result_minor_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/type_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/result_minor_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/half_padding"
                        android:text="@string/msg_default_time"
                        android:textColor="@color/result_minor_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/time_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/result_minor_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/meta_text_view_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/half_padding"
                        android:text="@string/msg_default_meta"
                        android:textColor="@color/result_minor_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/meta_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/result_minor_text" />
                </LinearLayout>
            </LinearLayout>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dip" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/contents_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:paddingLeft="12dip"
                        android:textColor="@color/result_text"
                        android:textColorLink="@color/result_text"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/contents_supplement_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:paddingLeft="12dip"
                        android:textColor="@color/result_text"
                        android:textColorLink="@color/result_text" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <!-- 状态窗口 -->

    <TextView
        android:id="@+id/status_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="150dp"
        android:background="@color/transparent"
        android:textColor="@color/status_text" />

</merge>